--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 streamlit
-pandas
+pandas>=2.1.0
 numpy
 openpyxl
 xlsxwriter
 pyarrow>=12.0.0
-pandas>=2.1.0
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
+thefuzz[speedup]
